html code redone
Html code was redone.
Some classes were renamed and new images placed at different lon
different lines of code.
Added meta tag for mobile quries

--- a/Header.html
+++ b/Header.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>Sta-Soft header</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -16,13 +18,15 @@
             </a>
         </div>
         <nav>
-            <div class="nav">
-                <ul>
-                    <li class="home"><a href="/">Home</a></li>
-                    <li class="products"><a href="/">Products</a></li>
-                    <li class="tips"><a href="/">Tips</a></li>
-                    <li class="faq"><a href="/">Faq</a></li>
-                </ul>
+            <ul class="menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Tips</a></li>
+                <li><a href="">Faq</a></li>
+                <li>
+                    <a href=""><img src="images/share.png" alt="icon"></a>
+                </li>
+            </ul>
         </nav>
         </div>
     </header>
