--- a/Header.html
+++ b/Header.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
     <title>Sta-Soft header</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -19,12 +18,12 @@
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Tips</a></li>
-                <li><a href="">Faq</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Products</a></li>
+                <li><a href="/">Tips</a></li>
+                <li><a href="/">Faq</a></li>
                 <li>
-                    <a href=""><img src="images/share.png" alt="icon"></a>
+                    <a href="/"><img src="images/share.png" alt="icon"></a>
                 </li>
             </ul>
         </nav>
